# ParallelProgramming

./: README.md
_Project1/src/cpu/: CMakeLists.txt  mpi_PartB.cpp  openmp_PartB.cpp  pthread_PartB.cpp  simd_PartB.cpp
_Project1/src/gpu/: CMakeLists.txt  cuda_PartB.cu  openacc_PartB.cpp
_Project1/src/scripts/: sbatch_PartB.sh
_Project2/perf_files/: cuda.data  cuda.data.old  locality.data  mpi.data  openmp.data  simd.data  simd.data.old
_Project2/src/: CMakeLists.txt  generate_matrix.py  locality.cpp  mpi.cpp  openmp.cpp  sbach.sh  simd.cpp
_Project2/src/gpu/: CMakeLists.txt  cuda.cu
_Project3/src/: sbach.sh  sbach_bonus.sh
_Project3/src/bucketsort/: mpi.cpp
_Project3/src/odd-even-sort/: mpi.cpp
_Project3/src/quicksort/: mpi.cpp  parallel.cpp
_Project4/src/: simple_ml_ext.cpp  simple_ml_openacc.cpp
